test/langtools/tools/javac/superInit/SuperInitBad07.out
SuperInitBad07.java:11:33: compiler.err.cant.ref.before.ctor.called: this
1 error
